[package]
name = "manga"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true
panic = "abort"

[dependencies]
reqwest = {version="0.13.2", default-features = false, features = ["rustls"]}
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros"] }
eyre = "0.6.12"
image = "0.25.10"
futures = "0.3.32"
